# paragon_slovoed_ce

./: LICENSE.txt  README.md
data/Compiler/: CMakeLists.txt  Compiler_2010.sln  Makefile
data/Compiler/Compiler/: AbstractItemContainer.h  AbstractItemManager.cpp  AbstractItemManager.h  Article.cpp  Article.h  Articles.cpp  Articles.h  ArticlesCompress.cpp  ArticlesCompress.h  ArticlesLoader.cpp  ArticlesLoader.h  AttributeConverter.cpp  AttributeConverter.h  CSSDataManager.cpp  CSSDataManager.h  CSSProperties.incl  CSSProperties.incl.py  Colour.h  Compiler.cpp  Compiler.makefile  Compiler.vcproj  Compiler.vcxproj  Compress.cpp  Compress.h  CompressByStore.cpp  CompressByStore.h  FileResourceManagement.cpp  FileResourceManagement.h  ICompressBy.h  ImageContainer.h  ImageManager.cpp  ImageManager.h  ListCompress.cpp  ListCompress.h  ListLoader.cpp  ListLoader.h  Log.cpp  Log.h  Material.cpp  Material.h  (+67 more)
slovoed/libraries/native_engine/lib/: CMakeLists.txt  build-version.gradle  build.gradle  proguard-public.pro
slovoed/libraries/native_engine/lib/src/main/: AndroidManifest.xml
slovoed/libraries/native_engine/lib/src/main/assets/: demo_page.html  page.html
slovoed/libraries/native_engine/lib/src/main/cpp/: functions.cpp  functions.h  native_engine.cpp
slovoed/libraries/native_engine/lib/src/main/cpp/context/: dictionary_context.cpp  dictionary_context.h  env_aware.cpp  env_aware.h  morpho_context.cpp  morpho_context.h
slovoed/libraries/native_engine/lib/src/main/cpp/context/builder/: DataAccess.cpp  DataAccess.h  HtmlBuilder.cpp  HtmlBuilder.h  LayerAccess.cpp  LayerAccess.h  SoundBuilder.cpp  SoundBuilder.h
slovoed/libraries/native_engine/lib/src/main/cpp/context/reader/: descriptor_reader.cpp  descriptor_reader.h  java_reader.cpp  java_reader.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/: all_functions.h  byte_array_function.cpp  byte_array_function.h  dictionary_context_function.cpp  dictionary_context_function.h  dictionary_function.cpp  dictionary_function.h  i_native_function.h  native_function.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/article/: GetArticleIndexesByHistoryElement.cpp  GetArticleIndexesByHistoryElement.h  GetHistoryElementByGlobalIndex.cpp  GetHistoryElementByGlobalIndex.h  StartsWith.cpp  StartsWith.h  Swipe.cpp  Swipe.h  Translate.cpp  Translate.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/fill/: GetCurrentWordStylizedVariant.cpp  GetCurrentWordStylizedVariant.h  GetExternalImage.cpp  GetExternalImage.h  GetPathFromGlobalIndex.cpp  GetPathFromGlobalIndex.h  GetPreloadedFavorites.cpp  GetPreloadedFavorites.h  GetRealWordLocation.cpp  GetRealWordLocation.h  GetWordByLocalIndex.cpp  GetWordByLocalIndex.h  GetWordCount.cpp  GetWordCount.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/info/: GetDictionaryLocalizedStrings.cpp  GetDictionaryLocalizedStrings.h  GetDictionaryVersion.cpp  GetDictionaryVersion.h  GetEngineVersion.cpp  GetEngineVersion.h  GetListCount.cpp  GetListCount.h  GetListLanguages.cpp  GetListLanguages.h  GetListLocalizedStrings.cpp  GetListLocalizedStrings.h  GetListType.cpp  GetListType.h  GetListVariants.cpp  GetListVariants.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/search/: AnagramSearch.cpp  AnagramSearch.h  DeleteAllSearchLists.cpp  DeleteAllSearchLists.h  FullTextSearch.cpp  FullTextSearch.h  FuzzySearch.cpp  FuzzySearch.h  GetArticleLinks.cpp  GetArticleLinks.h  GetBaseForms.cpp  GetBaseForms.h  GetHighlightWordReferenceIncludingWhitespace.cpp  GetHighlightWordReferenceIncludingWhitespace.h  GetQueryHighlightData.cpp  GetQueryHighlightData.h  GetQueryReferenceInPhrase.cpp  GetQueryReferenceInPhrase.h  GetWordByText.cpp  GetWordByText.h  GetWordReference.cpp  GetWordReference.h  GetWordReferenceInList.cpp  GetWordReferenceInList.h  ResetList.cpp  ResetList.h  SpellingSearch.cpp  SpellingSearch.h  WildCardSearch.cpp  WildCardSearch.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/service/: add_morpho_via_descriptor.cpp  add_morpho_via_descriptor.h  add_morpho_via_java_reader.cpp  add_morpho_via_java_reader.h  close_sdc.cpp  close_sdc.h  get_native_context_pointer_size.cpp  get_native_context_pointer_size.h  open_sdc_via_descriptor.cpp  open_sdc_via_descriptor.h  open_sdc_via_java_reader.cpp  open_sdc_via_java_reader.h  switch_direction.cpp  switch_direction.h
slovoed/libraries/native_engine/lib/src/main/cpp/functions/sound/: ConvertSpx.cpp  ConvertSpx.h  GetSoundIndexByText.cpp  GetSoundIndexByText.h  GetSoundIndexByWordGlobalIndex.cpp  GetSoundIndexByWordGlobalIndex.h  PlaySoundByIndex.cpp  PlaySoundByIndex.h
slovoed/libraries/native_engine/lib/src/main/cpp/java/: java_callback.cpp  java_callback.h  java_objects.cpp  java_objects.h
slovoed/libraries/native_engine/lib/src/main/java/com/paragon_software/engine/: ExternalBasesHolder.java  SlovoedEngine.java  SlovoedEngineSound.java  SyncSlovoedEngine.java
slovoed/libraries/native_engine/lib/src/main/java/com/paragon_software/engine/destructionqueue/: DestructionThread.java  ManagedResource.java  ResourceHolder.java
slovoed/libraries/native_engine/lib/src/main/java/com/paragon_software/engine/fileaccess/: AssetFileDescriptorFileAccess.java  (+3 more)
slovoed/prototype/search_all_dictionary/app/: CMakeLists.txt  build.gradle
slovoed/prototype/search_all_dictionary/app/src/main/: AndroidManifest.xml
slovoed/prototype/search_all_dictionary/app/src/main/cpp/: LayerAccess.h  close_dictionary.h  descriptor_reader.h  dictionary_holder.h  functions.h  java_objects.h  load_dictionary.h  native-lib.cpp  search_full_text.h
slovoed/prototype/search_all_dictionary/app/src/main/java/com/paragon_software/engine/: MainThreadRunner.java  NativeEngine.java  NativeFunctions.java
slovoed/prototype/search_all_dictionary/app/src/main/java/com/paragon_software/search_all_dictionary/: ApplicationState.java
slovoed/prototype/search_all_dictionary/app/src/main/res/layout/: search_activity.xml  search_result.xml
slovoed/prototype/search_all_dictionary/app/src/main/res/values/: strings.xml
(+1808 files in other folders)
