cmake_minimum_required(VERSION 3.4.1)

set(DICTIONARY_SOURCE_DIR ${PROJECT_SOURCE_DIR}/../../shdd.engine.components.sdc/Engine)

set(DICTIONARY_SOURCES
    ${DICTIONARY_SOURCE_DIR}/SldDictionary.cpp
    ${DICTIONARY_SOURCE_DIR}/SldDictionary.h
    ${DICTIONARY_SOURCE_DIR}/SldCompare.cpp
    ${DICTIONARY_SOURCE_DIR}/SldCompare.h
    ${DICTIONARY_SOURCE_DIR}/SldMorphology.cpp
    ${DICTIONARY_SOURCE_DIR}/SldMorphology.h
    ${DICTIONARY_SOURCE_DIR}/SldListInfo.cpp
    ${DICTIONARY_SOURCE_DIR}/SldListInfo.h
    ${DICTIONARY_SOURCE_DIR}/SldVideoElement.cpp
    ${DICTIONARY_SOURCE_DIR}/SldVideoElement.h
    ${DICTIONARY_SOURCE_DIR}/SldMetadataParser.cpp
    ${DICTIONARY_SOURCE_DIR}/SldMetadataParser.h
    ${DICTIONARY_SOURCE_DIR}/SldArticles.cpp
    ${DICTIONARY_SOURCE_DIR}/SldArticles.h
    ${DICTIONARY_SOURCE_DIR}/SldStyleInfo.cpp
    ${DICTIONARY_SOURCE_DIR}/SldStyleInfo.h
    ${DICTIONARY_SOURCE_DIR}/SldSearchList.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSearchList.h
    ${DICTIONARY_SOURCE_DIR}/SldSerialNumber.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSerialNumber.h
    ${DICTIONARY_SOURCE_DIR}/SldMergedList.cpp
    ${DICTIONARY_SOURCE_DIR}/SldMergedList.h
    ${DICTIONARY_SOURCE_DIR}/SldCustomList.cpp
    ${DICTIONARY_SOURCE_DIR}/SldCustomList.h
    ${DICTIONARY_SOURCE_DIR}/SldCustomListControl.cpp
    ${DICTIONARY_SOURCE_DIR}/SldCustomListControl.h
    ${DICTIONARY_SOURCE_DIR}/SldSearchWordResult.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSearchWordResult.h
    ${DICTIONARY_SOURCE_DIR}/SldLocalizedString.cpp
    ${DICTIONARY_SOURCE_DIR}/SldLocalizedString.h
    ${DICTIONARY_SOURCE_DIR}/SldSpeexDecoder.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSpeexDecoder.h
    ${DICTIONARY_SOURCE_DIR}/SldHistory.cpp
    ${DICTIONARY_SOURCE_DIR}/SldHistory.h
    ${DICTIONARY_SOURCE_DIR}/SldListLocalizedString.cpp
    ${DICTIONARY_SOURCE_DIR}/SldListLocalizedString.h
    ${DICTIONARY_SOURCE_DIR}/SldStringStore.cpp
    ${DICTIONARY_SOURCE_DIR}/SldStringStore.h
    ${DICTIONARY_SOURCE_DIR}/SldMetadataManager.cpp
    ${DICTIONARY_SOURCE_DIR}/SldMetadataManager.h
    ${DICTIONARY_SOURCE_DIR}/SldCSSDataManager.cpp
    ${DICTIONARY_SOURCE_DIR}/SldCSSDataManager.h
    ${DICTIONARY_SOURCE_DIR}/SldSDCReadMy.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSDCReadMy.h
    ${DICTIONARY_SOURCE_DIR}/SldTools.cpp
    ${DICTIONARY_SOURCE_DIR}/SldTools.h
    ${DICTIONARY_SOURCE_DIR}/SldSymbolsTable.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSymbolsTable.h
    ${DICTIONARY_SOURCE_DIR}/SldImageItem.cpp
    ${DICTIONARY_SOURCE_DIR}/SldImageItem.h
    ${DICTIONARY_SOURCE_DIR}/SldTypes.cpp
    ${DICTIONARY_SOURCE_DIR}/SldTypes.h
    ${DICTIONARY_SOURCE_DIR}/SldVideoItem.cpp
    ${DICTIONARY_SOURCE_DIR}/SldVideoItem.h
    ${DICTIONARY_SOURCE_DIR}/SldList.cpp
    ${DICTIONARY_SOURCE_DIR}/SldList.h
    ${DICTIONARY_SOURCE_DIR}/SldLogicalExpressionImplementation.cpp
    ${DICTIONARY_SOURCE_DIR}/SldLogicalExpressionImplementation.h
    ${DICTIONARY_SOURCE_DIR}/SldLogicalExpression.cpp
    ${DICTIONARY_SOURCE_DIR}/SldLogicalExpression.h
    ${DICTIONARY_SOURCE_DIR}/SldWavDecoder.cpp
    ${DICTIONARY_SOURCE_DIR}/SldWavDecoder.h
    ${DICTIONARY_SOURCE_DIR}/SldOggDecoder.cpp
    ${DICTIONARY_SOURCE_DIR}/SldOggDecoder.h
    ${DICTIONARY_SOURCE_DIR}/SldMp3Decoder.cpp
    ${DICTIONARY_SOURCE_DIR}/SldMp3Decoder.h
    ${DICTIONARY_SOURCE_DIR}/SldSpeexSinTable.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSpeexSinTable.h
    ${DICTIONARY_SOURCE_DIR}/SldImageAreaItem.cpp
    ${DICTIONARY_SOURCE_DIR}/SldImageAreaItem.h
    ${DICTIONARY_SOURCE_DIR}/SldString.h
    ${DICTIONARY_SOURCE_DIR}/SldStringReference.h
    ${DICTIONARY_SOURCE_DIR}/SDC_CRC.cpp
    ${DICTIONARY_SOURCE_DIR}/SDC_CRC.h
    ${DICTIONARY_SOURCE_DIR}/SldCatalog.cpp
    ${DICTIONARY_SOURCE_DIR}/SldCatalog.h
    ${DICTIONARY_SOURCE_DIR}/SldIndexes.cpp
    ${DICTIONARY_SOURCE_DIR}/SldIndexes.h
    ${DICTIONARY_SOURCE_DIR}/SldSimpleSortedList.cpp
    ${DICTIONARY_SOURCE_DIR}/SldSimpleSortedList.h
    ${DICTIONARY_SOURCE_DIR}/SldInputBase.cpp
    ${DICTIONARY_SOURCE_DIR}/SldInputBase.h
    ${DICTIONARY_SOURCE_DIR}/SldInputText.cpp
    ${DICTIONARY_SOURCE_DIR}/SldInputText.h
    ${DICTIONARY_SOURCE_DIR}/SldInputCountChars.cpp
    ${DICTIONARY_SOURCE_DIR}/SldInputCountChars.h
    ${DICTIONARY_SOURCE_DIR}/SldInputCharChain.cpp
    ${DICTIONARY_SOURCE_DIR}/SldInputCharChain.h
    ${DICTIONARY_SOURCE_DIR}/SldBitInput.cpp
    ${DICTIONARY_SOURCE_DIR}/SldBitInput.h
    ${DICTIONARY_SOURCE_DIR}/SldIntFormatter.cpp
    ${DICTIONARY_SOURCE_DIR}/SldIntFormatter.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/IMorphoData.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/IMorphoData.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData_v1.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData_v1.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData_v2.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData_v2.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData_v3.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/MorphoData_v3.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/LanguageSpecific_v1.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/LanguageSpecific_v1.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/LanguageSpecific_v2.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/LanguageSpecific_v2.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/WordSet_v1.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/WordSet_v1.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/WordSet_v2.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/WordSet_v2.h
    ${DICTIONARY_SOURCE_DIR}/Morphology/LastCharMap_v1.cpp
    ${DICTIONARY_SOURCE_DIR}/Morphology/LastCharMap_v2.cpp
    ${DICTIONARY_SOURCE_DIR}/lz4/lz4.c
    ${DICTIONARY_SOURCE_DIR}/lz4/lz4.h
    ${DICTIONARY_SOURCE_DIR}/Speex/speex.h
    ${DICTIONARY_SOURCE_DIR}/Speex/modes.c
    ${DICTIONARY_SOURCE_DIR}/Speex/speex_bits.h
    ${DICTIONARY_SOURCE_DIR}/Speex/bits.c
    ${DICTIONARY_SOURCE_DIR}/Speex/misc.c
    ${DICTIONARY_SOURCE_DIR}/Speex/misc.h
    ${DICTIONARY_SOURCE_DIR}/Speex/nb_celp.h
    ${DICTIONARY_SOURCE_DIR}/Speex/nb_celp.c
    ${DICTIONARY_SOURCE_DIR}/Speex/sb_celp.h
    ${DICTIONARY_SOURCE_DIR}/Speex/sb_celp.c
    ${DICTIONARY_SOURCE_DIR}/Speex/vbr.h
    ${DICTIONARY_SOURCE_DIR}/Speex/vbr.c
    ${DICTIONARY_SOURCE_DIR}/Speex/quant_lsp.h
    ${DICTIONARY_SOURCE_DIR}/Speex/quant_lsp.c
    ${DICTIONARY_SOURCE_DIR}/Speex/ltp.h
    ${DICTIONARY_SOURCE_DIR}/Speex/ltp.c
    ${DICTIONARY_SOURCE_DIR}/Speex/lpc.h
    ${DICTIONARY_SOURCE_DIR}/Speex/lpc.c
    ${DICTIONARY_SOURCE_DIR}/Speex/lsp.h
    ${DICTIONARY_SOURCE_DIR}/Speex/lsp.c
    ${DICTIONARY_SOURCE_DIR}/Speex/cb_search.h
    ${DICTIONARY_SOURCE_DIR}/Speex/cb_search.c
    ${DICTIONARY_SOURCE_DIR}/Speex/filters.h
    ${DICTIONARY_SOURCE_DIR}/Speex/filters.c
    ${DICTIONARY_SOURCE_DIR}/Speex/vq.h
    ${DICTIONARY_SOURCE_DIR}/Speex/vq.c
    ${DICTIONARY_SOURCE_DIR}/Speex/math_approx.h
    ${DICTIONARY_SOURCE_DIR}/Speex/math_approx.c
    ${DICTIONARY_SOURCE_DIR}/Speex/speex_callbacks.h
    ${DICTIONARY_SOURCE_DIR}/Speex/speex_callbacks.c
    ${DICTIONARY_SOURCE_DIR}/Speex/lsp_tables_nb.c
    ${DICTIONARY_SOURCE_DIR}/Speex/gain_table_lbr.c
    ${DICTIONARY_SOURCE_DIR}/Speex/exc_10_16_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/exc_10_32_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/exc_8_128_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/gain_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/exc_5_64_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/exc_5_256_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/exc_20_32_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/hexc_10_32_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/hexc_table.c
    ${DICTIONARY_SOURCE_DIR}/Speex/high_lsp_tables.c
   )

set(DICTIONARY_INCLUDE ${DICTIONARY_SOURCE_DIR})

set(SOURCE_FILES src/main/cpp/native-lib.cpp
                 src/main/cpp/java_objects.h
                 src/main/cpp/descriptor_reader.h
                 src/main/cpp/functions.h
                 src/main/cpp/close_dictionary.h
                 src/main/cpp/load_dictionary.h
                 src/main/cpp/search_full_text.h)

add_library( native-engine SHARED ${SOURCE_FILES} ${DICTIONARY_SOURCES})

find_library( log-lib log )

target_link_libraries( native-engine ${log-lib} )
target_include_directories(native-engine PRIVATE ${DICTIONARY_INCLUDE})